Fix app transitions in firefox (needs cleanup)

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -296,15 +296,15 @@
             </div>
           </section>
           
-          <section class="main-section" style="display:none;">
+          <section class="main-section">
             <div id="navbar_container"></div>
             <div id="modal_container" style="display:none;"></div>
             <div id="waiting_container">
               <i class="fa fa-5x fa-cog fa-spin"></i>
             </div>
             <div id="app-client-container">
-            <div class='footBar'>
-            </div>
+            <!-- approot/job_manager.fma/index.html -->
+            <iframe src="about:blank" class="app-iframe" id="app-iframe" sandbox="allow-scripts allow-same-origin" allowfullscreen=""></iframe>
             </div>
             </div>
             <div class="clear"></div>
