--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -136,7 +136,7 @@
 
         <div class="large-4 columns">
           <div class="row collapse">
-              <button id="btn-update">Update Software</button>
+              <a id="btn-update"  class="button radius small">Update FabMo Software...</a>
           </div>
         </div>
       </fieldset>
