Fix STOP issues

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -257,7 +257,7 @@
               -->
             </div>
 
-            <div id="job-info" class="widget">
+            <div id="job-info" class="widget noselect">
 
                 <ul class="off-canvas-list fabmo-status fabmo-file-control">
                   <li style="margin: 10px" class="file-info" style="align: center;">
@@ -270,17 +270,17 @@
                   </li>
                   <li style="margin: 10px">
                         <span class="fabmo-pause-button hide">
-                          <a class="med button warning radius" style="border: 2px solid black;">Pause</a>
+                          <a class="med button warning radius noselect" style="border: 2px solid black;">Pause</a>
                         </span>
                   </li>
                   <li style="margin: 10px">
                         <span class="fabmo-resume-button hide">
-                          <a class="med button success radius" style="border: 2px solid black;">Resume</a>
+                          <a class="med button success radius noselect" style="border: 2px solid black;">Resume</a>
                         </span>
                   </li>
                   <li style="margin: 10px">
                         <span class="fabmo-stop-button hide">
-                          <a class="med button alert radius" style="border: 2px solid black;">Stop</a>
+                          <a class="med button alert radius noselect" style="border: 2px solid black;">Stop</a>
                         </span>
                   </li>
                 </ul>
