--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -39,12 +39,15 @@
   	</div>
 	<section class="container topjob hoverdim">
 			<div class="row title jobs-title">
-				<div class="small-12 columns">
+				<div class="small-11 columns">
 					<h4 class="up-next">Up Next</h4>
 					<h4 class="now-running">Now Running</h4>
                     <h4 class="no-jobs">No Jobs</h4>
 				</div>
 			</div>
+             <div class="job-status-indicator">
+                <div class="job-status-light"></div>
+            </div>
 			<div class="row">
 				<div class="small-8 jobs-wrapper">
 					<div class="small-8 medium-8 columns with-job">
@@ -250,6 +253,10 @@
 	  e.wrap('<form>').closest('form').get(0).reset();
 	  e.unwrap();
 	}
+    
+   window.setInterval(function(){
+   		$('.job-status-light').toggleClass('off');
+	}, 1000);
 
 	
   });
