enhancing icons in macros

--- a/dashboard/apps/macro_manager.fma/index.html
+++ b/dashboard/apps/macro_manager.fma/index.html
@@ -89,7 +89,7 @@
                         "className":      'run-control',
                         "orderable":      false,
                         "data":           null,
-                        "defaultContent": '',
+                        "defaultContent": '<img class="svg" src="css/images/play_icon.png">',
                     },
                     {
                         data : "index",
@@ -110,13 +110,13 @@
                         "className":      'edit-control',
                         "orderable":      false,
                         "data":           null,
-                        "defaultContent": '',                
+                        "defaultContent": '<img class="svg" src="css/images/edit_icon.png">',                
                     },
                     {
                         "className":      'delete-control',
                         "orderable":      false,
                         "data":           null,
-                        "defaultContent": '',                
+                        "defaultContent": '<img class="svg" src="css/images/recycling10.svg">',                
                     }
                 ],
                 "order" : [[1,"asc"]]
