--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -94,7 +94,12 @@
 
             <!-- ***** Right-Menu Button Section ***** -->
             <section class="right-small right">
-              <a class="menu-icon DRO-button" href="#"><span></span></a>
+              <a class="DRO-button" href="#">
+                  <div class='drobuttonOuter'>
+                    <div class='drobuttonInnerL'></div>
+                    <div class='drobuttonInnerS'></div>
+                  </div>
+              </a>
             </section>
           </nav>
 
