Moving in the direction of correct stop button behavior

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -48,7 +48,7 @@
               <div class="percent_comp">10%</div>
            </div>
  
-          <span class='fabmo-stop-button'>
+          <span class='fabmo-pause-button'>
             <a class='stopJob'>STOP</a>
           </span>
           </div>
