--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -47,10 +47,19 @@
               </div>
               <div class="percent_comp">10%</div>
            </div>
- 
+
           <span class='fabmo-pause-button'>
             <a class='stopJob'>STOP</a>
           </span>
+
+          <span class='fabmo-resume-button'>
+            <a class='resumeJob'>RESUME</a>
+          </span>
+
+          <span class='fabmo-stop-button'>
+            <a class='stopJob'>QUIT</a>
+          </span>
+
           </div>
           <!-- New nav work -->
           <!-- Nav-Bar & Buttons for sliding menus -->
