resume from footer works can pause from JM and alignment fixed

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -213,9 +213,9 @@
 		$('#job_selector').click();
 	});
 
-	$('#run-next').click(function(e) { 
+	$('.play-button').click(function(e) { 
 		if ($('.play').hasClass('active')){
-			fabmo.stop(function(err, data) {
+			fabmo.pause(function(err, data) {
 		});
 		} else {
 			fabmo.runNext(function(err, data) {
