--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -49,15 +49,12 @@
            </div>
 
           <span class='fabmo-pause-button'>
-            <a class='stopJob'>STOP</a>
+            <div class='pauseJob'>STOP</div>
           </span>
 
-          <span class='fabmo-resume-button'>
-            <a class='resumeJob'>RESUME</a>
-          </span>
-
-          <span class='fabmo-stop-button'>
-            <a class='stopJob'>QUIT</a>
+          <span class='fabmo-resume-stop'>
+            <div class='resumeJob'>RESUME</div> 
+            <div class='stopJob'>QUIT</div>
           </span>
 
           </div>
@@ -136,7 +133,7 @@
                            <label  class="noselect">
                             X
                             <span class="units">&nbsp;</span>
-                            <input class="posx pos doselect axi" maxlength="6">
+                            <input class="posx pos doselect axi" maxlength="6" type="number">
                           </label>
                         </div>
                         <div class="small-2 columns home"><span class="button-zerox">0</span></div>
@@ -146,7 +143,7 @@
                         <label class="noselect">
                         Y
                         <span class="units">&nbsp;</span>
-                        <input class="posy pos doselect axi"  maxlength="6">
+                        <input class="posy pos doselect axi"  maxlength="6" type="number">
                         </label>
                       </div>
                       <div class="small-2 columns home"><span class="button-zeroy">0</span></div>
@@ -156,7 +153,7 @@
                         <label class="noselect">
                         Z
                         <span class="units">&nbsp;</span>
-                        <input class="posz pos doselect axi" maxlength="6">
+                        <input class="posz pos doselect axi" maxlength="6" type="number">
                         </label>
                       </div>
                       <div class="small-2 columns home"><span class="button-zeroz">0</span></div>
@@ -166,7 +163,7 @@
                           <label class="noselect">
                             A
                             <span class="units">&nbsp;</span>
-                            <input class="posa pos doselect axi" maxlength="6">
+                            <input class="posa pos doselect axi" maxlength="6" type="number">
                           </label>
                         </div>
                         <div class="small-2 columns home"><span class="button-zeroa">0</span></div>
@@ -176,7 +173,7 @@
                           <label class="noselect">
                             B
                             <span class="units">&nbsp;</span>
-                            <input class="posb pos doselect axi" maxlength="6">
+                            <input class="posb pos doselect axi" maxlength="6" type="number">
                           </label>
                         </div>
                         <div class="small-2 columns home"><span class="button-zerob">0</span></div>
