Clean up messages, allow authorization disable.

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1630,6 +1630,7 @@
           <div class="row collapse">
            <label>Authorization Input
                 <select id="machine-auth_input" class="machine-input">
+                  <option value="0">No Authorization</option>
                   <option value="1">Input 1</option>
                   <option value="2">Input 2</option>
                   <option value="3">Input 3</option>
@@ -1642,7 +1643,7 @@
               </label>
           </div> 
           <div class="row collapse">
-            <label>Authorization Timeout (Set to 0 to disable)</label>
+            <label>Authorization Timeout</label>
             <div class="small-9 columns">
               <input type="number" id="machine-auth_timeout" class="machine-input"/>
             </div>
