Show tool name in top bar

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -84,6 +84,12 @@
                 </div>
             </section>
 
+            <section class="left show-for-small-up" id="tool-name-container">
+            <span id="tool-name">
+              &nbsp;
+            </span>
+            </section>
+
             <!-- ***** Tool Position Section ***** -->
             <section class="right show-for-small-up fabmo-status" id="right-position-container">
             <div style="display: table-row;">
