pause flashes orange in jm

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -161,7 +161,7 @@
                            <label  class="noselect">
                             X
                             <span class="units">&nbsp;</span>
-                            <input class="posx pos doselect axi" maxlength="6" type="number">
+                            <input class="posx pos doselect axi" maxlength="6"  step="0.001">
                           </label>
                         </div>
                         <div class="small-2 columns home"><span class="button-zerox">0</span></div>
@@ -171,7 +171,7 @@
                         <label class="noselect">
                         Y
                         <span class="units">&nbsp;</span>
-                        <input class="posy pos doselect axi"  maxlength="6" type="number">
+                        <input class="posy pos doselect axi"  maxlength="6"  step="0.001">
                         </label>
                       </div>
                       <div class="small-2 columns home"><span class="button-zeroy">0</span></div>
@@ -181,7 +181,7 @@
                         <label class="noselect">
                         Z
                         <span class="units">&nbsp;</span>
-                        <input class="posz pos doselect axi" maxlength="6" type="number">
+                        <input class="posz pos doselect axi" maxlength="6"  step="0.001">
                         </label>
                       </div>
                       <div class="small-2 columns home"><span class="button-zeroz">0</span></div>
@@ -191,7 +191,7 @@
                           <label class="noselect">
                             A
                             <span class="units">&nbsp;</span>
-                            <input class="posa pos doselect axi" maxlength="6" type="number">
+                            <input class="posa pos doselect axi" maxlength="6"  step="0.001">
                           </label>
                         </div>
                         <div class="small-2 columns home"><span class="button-zeroa">0</span></div>
@@ -201,7 +201,7 @@
                           <label class="noselect">
                             B
                             <span class="units">&nbsp;</span>
-                            <input class="posb pos doselect axi" maxlength="6" type="number">
+                            <input class="posb pos doselect axi" maxlength="6"  step="0.001">
                           </label>
                         </div>
                         <div class="small-2 columns home"><span class="button-zerob">0</span></div>
