edit icon now pencil

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -95,7 +95,7 @@
 				</div>
 				<div class="medium-1 small-2 columns">
 					<a class='edit' title='Edit Job'>
-						<img class='svg' src="css/images/settings46.svg">
+						<img class='svg' src="images/edit_icon.png">
 					</a>
 				</div>
 				<div class="medium-1 small-2 columns">
