--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -256,6 +256,11 @@
 	
 	fabmo.on('status', function(status) {
 		handleStatusReport(status);
+        if (status.job == null && status.state != 'idle') {
+            $('.play-button').hide();
+        } else if (status.state == 'idle') {
+           $('.play-button').show();
+        }
         if (status.state == 'running') {
             $('.job-status-light.one').css({'animation': 'off 1.5s  infinite', '-moz-animation': 'off 1.5s  infinite', '-webkit-animation': 'off 1.5s  infinite'});
             $('.job-status-light.two').css({'animation': 'off 1.5s 0.5s infinite', '-moz-animation': 'off 1.5s 0.5s infinite', '-webkit-animation': 'off 1.5s 0.5s infinite'});
