--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -255,10 +255,9 @@
 	}).resize();
 	
 	fabmo.on('status', function(status) {
-		handleStatusReport(status);
         if (status.job == null && status.state != 'idle') {
             $('.play-button').hide();
-        } else if (status.state == 'idle') {
+        } else if (status.state == 'idle' && $('.with-job').data('job') == true) {
            $('.play-button').show();
         }
         if (status.state == 'running') {
