--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -255,6 +255,7 @@
 	}).resize();
 	
 	fabmo.on('status', function(status) {
+        handleStatusReport(status);
         if (status.job == null && status.state != 'idle') {
             $('.play-button').hide();
         } else if (status.state == 'idle' && $('.with-job').data('job') == true) {
