--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -316,6 +316,19 @@
           <span style="font-weight: bold;">Waiting for FabMo...</span>
           </div>
       </div>
+      <div class="modalDim"></div>
+      <div class="newModal">
+          <div class="modalContent">
+            <h1 class="modalTitle">Title<h1>
+            <div class="modalSubContent">
+                <img class="modalImage">
+                <h4 class="modalDialogue"> blah blah blah this is some text to tell you why you are getting a modal</h4>
+          </div>
+          <div class="modalButtons">
+              <div class="modalOkay">
+              <dic class="modalCancel">
+          </div>
+      <div>
 
       <script type="text/javascript" src="/js/libs/spin.min.js"></script>
       <script type="text/javascript">
