Hide Transforms that need more testing and possibly more work

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -190,7 +190,7 @@
       </fieldset>
     </div>
 
-    <div class="row">
+<!--     <div class="row">
       <fieldset>
         <legend>Scale</legend>
         <div class="large-4 columns">
@@ -270,7 +270,7 @@
           </div> 
         </div>
       </fieldset>
-    </div>
+    </div> -->
 
     <div class="row">
       <fieldset>
@@ -321,7 +321,7 @@
       </fieldset>
     </div>
 
-    <div class="row">
+<!--     <div class="row">
       <fieldset>
         <legend>Shear X</legend>
           <div class="large-4 columns">
@@ -346,9 +346,9 @@
             </div> 
           </div>  
       </fieldset>
-    </div>
+    </div> -->
 
-    <div class="row">
+<!--     <div class="row">
       <fieldset>
         <legend>Shear Y</legend>
         <div class="large-4 columns">
@@ -360,9 +360,9 @@
                 </select>
               </label>
             </div>
-        </div>
+        </div> -->
 
-        <div class="large-4 columns">
+<!--         <div class="large-4 columns">
           <div class="row collapse">
             <label>Shear Angle Y</label>
             <div class="small-9 columns">
@@ -390,9 +390,9 @@
             </div>
         </div>
       </fieldset>
-    </div>
+    </div> -->
   
-    <div class="row">
+<!--     <div class="row">
       <fieldset>
         <legend>Leveling</legend>
         <div class="large-4 columns">
@@ -417,7 +417,7 @@
           </div> 
         </div>
       </fieldset>
-    </div>
+    </div> -->
   </section>
 
   <section role="tabpanel" aria-hidden="true" class="content" id="tabpanel2">
