--- a/dashboard/apps/app_manager.fma/index.html
+++ b/dashboard/apps/app_manager.fma/index.html
@@ -17,9 +17,7 @@
 	    <li class="name">
 	      <h1><a>Apps</a></h1> 
 	    </li>
-	    <li class="toggle-topbar menu-icon">
-	    	<a href="#"><span></span></a>
-	    </li>
+	    <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>
 	  </ul>
 	    <section class="top-bar-section">    
 
