Begin work on issue403

--- a/dashboard/apps/selftest.fma/index.html
+++ b/dashboard/apps/selftest.fma/index.html
@@ -5,17 +5,17 @@
 	<link rel="stylesheet" href="./css/pure-min.css">
 </head>
 <body>
-  <ul>
-    <li><a href="#" id="submitSingleString">Submit a Single String</a></li>
-    <li><a href="#" id="submitArrayOfStrings">Submit an array of Strings</a></li>
-
-    <li><a href="#" id="submitSingleObject">Submit a Single Object</a></li>
-    <li><a href="#" id="submitArrayOfObjects">Submit an array of Objects</a></li>
-    
-    <li><a href="#" id="submitMultipleJobs">Submit Multiple Jobs</a></li>
-    <li><a href="#" id="showModal">Show the modal</a></li>
-
-  </ul>
+		<table style="width:100%" id="test_table">
+		<thead>
+	    <tr>
+	        <th>&nbsp;</th>
+	        <th>Name</th>
+	        <th>Description</th>
+	        <th>Status</th>
+	    </tr>
+		</thead>
+		<tbody><tr></tr></tbody>
+		</table>
 
   <form id="fileForm">
   <input type="file" id="fileInput"/>
