Fix up styles for wifi history

--- a/dashboard/apps/network_manager.fma/index.html
+++ b/dashboard/apps/network_manager.fma/index.html
@@ -54,7 +54,7 @@
         </section>
     
         <h1>Wireless Networks</h1>
-        <div id="table-outer" style="margin: 1em;">
+        <div class="table-outer">
             <table class="small-12 columns" style="width:100%" id="wifi_table">
             <thead>
                 <tr>
@@ -69,7 +69,7 @@
 
         <div id="recent" class="hidden">
         <h1>Recently Connected</h1>
-        <div id="table-outer" style="margin: 1em;">
+        <div class="table-outer">
             <table class="small-12 columns" style="width:100%" id="history_table">
             <thead>
                 <tr>
