--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -272,13 +272,13 @@
 
       setup();
 
-      editor.on('blur', function(evt) {
-        if(!source) {
-          save();          
-        }
-                console.log($('.ace_scroller')[0]);
-        $('.ace_scroller')[0].focus();
-      });
+    //   editor.on('blur', function(evt) {
+    //     if(!source) {
+    //       save();          
+    //     }
+    //             console.log($('.ace_scroller')[0]);
+    //     $('.ace_scroller')[0].focus();
+    //   });
 
       function resize() {
         var h = window.innerHeight;
