improve gstreamer performances

--- a/dashboard/static/video.html
+++ b/dashboard/static/video.html
@@ -10,7 +10,7 @@
 	<body>
 		<div id="stream-container">
 
-			<canvas id="videostream"></canvas>
+			<canvas id="videostream" height="480" width="640"></canvas>
 
 		</div>
 	</body>
@@ -45,19 +45,21 @@ this.socket.on('connect', function() {
 //read video stream
 this.socket.on('video', function(data) {
 	//console.log(data);
+	var canvas = document.getElementById('videostream');
+	var context = canvas.getContext('2d');
+	var imageObj = new Image();
+
 	try {
 		// 1. method: draw on canvas
-		/*var canvas = document.getElementById('videostream');
-		var context = canvas.getContext('2d');
-		var imageObj = new Image();
+
 		imageObj.src = "data:image/jpeg;base64,"+data;
 		imageObj.onload = function(){
 			context.height = imageObj.height;
 			context.width = imageObj.width;
 			context.drawImage(imageObj,0,0,context.width,context.height);
-		}*/
+		}
 		// 2. method: draw as CSS background
-		$('#videostream').css('background', 'transparent url(data:image/jpeg;base64,'+data+') top left / 100% 100% no-repeat');
+		//$('#videostream').css('background', 'transparent url(data:image/jpeg;base64,'+data+') top left / 100% 100% no-repeat');
 	} catch(e){ }
 });
 
